--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@ and optimization.  My current projects involve modeling, design, and optimal con
 of large-scale energy transmission systems, in particular natural gas pipelines.</p>
 
 <p><strong>The <a href="http://github.com/lanl-ansi" target="_blank">Advanced Network Science Initiative</a> is looking for
-graduate students and postdocs with research interests in optimization, control theory, applied math, network science, and energy systems.  Does working with the brightest minds in the world on the nation&rsquo;s critical energy challenges excite you? <a href="mailto:azlotnik@lanl.gov" target="_blank">Contact me here.</a></strong></p>
+graduate students and postdocs with research interests in optimization, control theory, applied math, network science, and energy systems.
+The collaborative laboratory environment in a beautiful alpine setting inspired many great scientists who combined groundbreaking work with hiking, mountain biking, skiing, and the arts.  Does working with the brightest minds in the world on the nation&rsquo;s critical energy challenges excite you? <a href="mailto:azlotnik@lanl.gov" target="_blank">Contact me here.</a></strong></p>
 
 
     <div class="row">
@@ -299,67 +300,67 @@ graduate students and postdocs with research interests in optimization, control 
 
 <ul>
 <li><p>Dyachenko, Sergey A., Anatoly Zlotnik, Alexander O. Korotkevich, and Michael Chertkov. &ldquo;Operator splitting method for simulation of dynamic flows in natural gas pipeline networks.&rdquo;
-Physica D: Nonlinear Phenomena, in press (2017); <a href="http://doi.org/10.1016/j.physd.2017.09.002" target="_blank"> PDF</a></p></li>
+Physica D: Nonlinear Phenomena, in press (2017); <a href="http://doi.org/10.1016/j.physd.2017.09.002" target="_blank"> ONLINE</a></p></li>
 
 <li><p>Snyder, Jordan, Anatoly Zlotnik, and Aric Hagberg. &ldquo;Stability of entrainment of a continuum of coupled oscillators.&rdquo;
-Chaos 27, 103108 (2017); <a href="http://aip.scitation.org/doi/pdf/10.1063/1.4994567" target="_blank"> PDF</a></p></li>
+Chaos 27, 103108 (2017); <a href="http://aip.scitation.org/doi/pdf/10.1063/1.4994567" target="_blank"> ONLINE</a></p></li>
 
 <li><p>Zlotnik, Anatoly, Line Roald, Scott Backhaus, Michael Chertkov, and Göran Andersson. &ldquo;Coordinated scheduling for interdependent electric power and natural gas infrastructures.&rdquo;
-IEEE Transactions on Power Systems 32.1 (2017): 600-610. <a href="http://ieeexplore.ieee.org/abstract/document/7440893/" target="_blank"> PDF</a></p></li>
+IEEE Transactions on Power Systems 32.1 (2017): 600-610. <a href="http://ieeexplore.ieee.org/abstract/document/7440893/" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Zlotnik, Anatoly, Raphael Nagao, István Z. Kiss, and Jr-Shin Li. &ldquo;Phase-selective entrainment of nonlinear oscillator ensembles.&rdquo; Nature communications 7 (2016). <a href="https://www.nature.com/articles/ncomms10788" target="_blank"> PDF</a></p></li>
+<li><p>Zlotnik, Anatoly, Raphael Nagao, István Z. Kiss, and Jr-Shin Li. &ldquo;Phase-selective entrainment of nonlinear oscillator ensembles.&rdquo; Nature communications 7 (2016). <a href="https://www.nature.com/articles/ncomms10788" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Zlotnik, Anatoly, and Jr-Shin Li. &ldquo;Optimal subharmonic entrainment of weakly forced nonlinear oscillators.&rdquo; SIAM Journal on Applied Dynamical Systems 13.4 (2014): 1654-1693. <a href="http://epubs.siam.org/doi/abs/10.1137/140952211" target="_blank"> PDF</a></p></li>
+<li><p>Zlotnik, Anatoly, and Jr-Shin Li. &ldquo;Optimal subharmonic entrainment of weakly forced nonlinear oscillators.&rdquo; SIAM Journal on Applied Dynamical Systems 13.4 (2014): 1654-1693. <a href="http://epubs.siam.org/doi/abs/10.1137/140952211" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Qi, Ji, Anatoly Zlotnik, and Jr-Shin Li. &ldquo;Optimal ensemble control of stochastic time-varying linear systems.&rdquo; Systems &amp; Control Letters 62.11 (2013): 1057-1064. <a href="http://doi.org/10.1016/j.sysconle.2013.07.013" target="_blank"> PDF</a></p></li>
+<li><p>Qi, Ji, Anatoly Zlotnik, and Jr-Shin Li. &ldquo;Optimal ensemble control of stochastic time-varying linear systems.&rdquo; Systems &amp; Control Letters 62.11 (2013): 1057-1064. <a href="http://doi.org/10.1016/j.sysconle.2013.07.013" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Zlotnik, Anatoly, et al. &ldquo;Optimal waveform for fast entrainment of weakly forced nonlinear oscillators.&rdquo; Physical review letters 111.2 (2013): 024102. <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.111.024102" target="_blank"> PDF</a></p></li>
+<li><p>Zlotnik, Anatoly, et al. &ldquo;Optimal waveform for fast entrainment of weakly forced nonlinear oscillators.&rdquo; Physical review letters 111.2 (2013): 024102. <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.111.024102" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Zlotnik, Anatoly, and Jr-Shin Li. &ldquo;Optimal entrainment of neural oscillator ensembles.&rdquo; Journal of neural engineering 9.4 (2012): 046015. <a href="https://doi.org/10.1088/1741-2560/9/4/046015" target="_blank"> PDF</a></p></li>
+<li><p>Zlotnik, Anatoly, and Jr-Shin Li. &ldquo;Optimal entrainment of neural oscillator ensembles.&rdquo; Journal of neural engineering 9.4 (2012): 046015. <a href="https://doi.org/10.1088/1741-2560/9/4/046015" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Piryatinska, Alexandra, Gyorgy Terdik, Wojbor A. Woyczynski, Kenneth A. Loparo, Mark S. Scher, and Anatoly Zlotnik.  &ldquo;Automated detection of neonate EEG sleep stages.&rdquo; Computer methods and programs in biomedicine 95.1 (2009): 31-46. <a href="http://doi.org/10.1016/j.cmpb.2009.01.006" target="_blank"> PDF</a></p></li>
+<li><p>Piryatinska, Alexandra, Gyorgy Terdik, Wojbor A. Woyczynski, Kenneth A. Loparo, Mark S. Scher, and Anatoly Zlotnik.  &ldquo;Automated detection of neonate EEG sleep stages.&rdquo; Computer methods and programs in biomedicine 95.1 (2009): 31-46. <a href="http://doi.org/10.1016/j.cmpb.2009.01.006" target="_blank"> ONLINE</a></p></li>
 </ul>
 
 <p><strong>Conference Papers</strong></p>
 
 <ul>
-<li><p>Wu, Fei, Harsha Nagarajan, Anatoly Zlotnik, Ramteen Sioshansi, and Aleksandr M. Rudkevich. &ldquo;Adaptive convex relaxations for gas pipeline network optimization.&rdquo; American Control Conference (ACC). IEEE, 2017. <a href="http://ieeexplore.ieee.org/document/7963683/" target="_blank"> PDF</a></p></li>
+<li><p>Wu, Fei, Harsha Nagarajan, Anatoly Zlotnik, Ramteen Sioshansi, and Aleksandr M. Rudkevich. &ldquo;Adaptive convex relaxations for gas pipeline network optimization.&rdquo; American Control Conference (ACC). IEEE, 2017. <a href="http://ieeexplore.ieee.org/document/7963683/" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Zlotnik, Anatoly, Aleksandr M. Rudkevich, Evgeniy Goldis, Pablo A. Ruiz, Michael Caramanis, Richard Carter, Scott Backhaus, Richard Tabors, Richard Hornby, and Daniel Baldwin. &ldquo;Economic Optimization of Intra-Day Gas Pipeline Flow Schedules using Transient Flow Models.&rdquo; PSIG Annual Meeting. Pipeline Simulation Interest Group, 2017. <a href="https://www.onepetro.org/conference-paper/PSIG-1715" target="_blank"> PDF</a></p></li>
+<li><p>Zlotnik, Anatoly, Aleksandr M. Rudkevich, Evgeniy Goldis, Pablo A. Ruiz, Michael Caramanis, Richard Carter, Scott Backhaus, Richard Tabors, Richard Hornby, and Daniel Baldwin. &ldquo;Economic Optimization of Intra-Day Gas Pipeline Flow Schedules using Transient Flow Models.&rdquo; PSIG Annual Meeting. Pipeline Simulation Interest Group, 2017. <a href="https://www.onepetro.org/conference-paper/PSIG-1715" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Rudkevich, Alex, and Anatoly Zlotnik. &ldquo;Locational Marginal Pricing of Natural Gas subject to Engineering Constraints.&rdquo; Proceedings of the 50th Hawaii International Conference on System Sciences. 2017. <a href="http://scholarspace.manoa.hawaii.edu/handle/10125/41531" target="_blank"> PDF</a></p></li>
+<li><p>Rudkevich, Alex, and Anatoly Zlotnik. &ldquo;Locational Marginal Pricing of Natural Gas subject to Engineering Constraints.&rdquo; Proceedings of the 50th Hawaii International Conference on System Sciences. 2017. <a href="http://scholarspace.manoa.hawaii.edu/handle/10125/41531" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Zlotnik, Anatoly,  Line Roald, Scott Backhaus, Michael Chertkov, and Göran Andersson. &ldquo;Control policies for operational coordination of electric power and natural gas transmission systems.&rdquo; American Control Conference (ACC). IEEE, 2016. <a href="http://doi.org/10.1109/ACC.2016.7526854" target="_blank">PDF</a></p></li>
+<li><p>Zlotnik, Anatoly,  Line Roald, Scott Backhaus, Michael Chertkov, and Göran Andersson. &ldquo;Control policies for operational coordination of electric power and natural gas transmission systems.&rdquo; American Control Conference (ACC). IEEE, 2016. <a href="http://doi.org/10.1109/ACC.2016.7526854" target="_blank">ONLINE</a></p></li>
 
-<li><p>Mak, Terrence W. K., Pascal Van Hentenryck, Anatoly Zlotnik, Hassan Hijazi, and Russell Bent. &ldquo;Efficient dynamic compressor optimization in natural gas transmission systems.&rdquo; American Control Conference (ACC). IEEE, 2016. <a href="http://doi.org/10.1109/ACC.2016.7526855" target="_blank"> PDF</a></p></li>
+<li><p>Mak, Terrence W. K., Pascal Van Hentenryck, Anatoly Zlotnik, Hassan Hijazi, and Russell Bent. &ldquo;Efficient dynamic compressor optimization in natural gas transmission systems.&rdquo; American Control Conference (ACC). IEEE, 2016. <a href="http://doi.org/10.1109/ACC.2016.7526855" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Zlotnik, Anatoly, Sidhant Misra, Marc Vuffray, and Michael Chertkov. &ldquo;Monotonicity of actuated flows on dissipative transport networks.&rdquo; European Control Conference (ECC). IEEE, 2016. <a href="http://doi.org/10.1109/ECC.2016.7810392" target="_blank"> PDF</a></p></li>
+<li><p>Zlotnik, Anatoly, Sidhant Misra, Marc Vuffray, and Michael Chertkov. &ldquo;Monotonicity of actuated flows on dissipative transport networks.&rdquo; European Control Conference (ECC). IEEE, 2016. <a href="http://doi.org/10.1109/ECC.2016.7810392" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Carter, Richard, Scott Backhaus, Alex Hollis, Anatoly Zlotnik, Michael Chertkov, Anthony Giacomoni, and Andrew Daniels. &ldquo;Impact of regulatory change to coordinate gas pipelines and power systems.&rdquo; PSIG Annual Meeting. Pipeline Simulation Interest Group, 2016. <a href="http://permalink.lanl.gov/object/tr?what=info:lanl-repo/lareport/LA-UR-16-23168" target="_blank"> PDF</a></p></li>
+<li><p>Carter, Richard, Scott Backhaus, Alex Hollis, Anatoly Zlotnik, Michael Chertkov, Anthony Giacomoni, and Andrew Daniels. &ldquo;Impact of regulatory change to coordinate gas pipelines and power systems.&rdquo; PSIG Annual Meeting. Pipeline Simulation Interest Group, 2016. <a href="http://permalink.lanl.gov/object/tr?what=info:lanl-repo/lareport/LA-UR-16-23168" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Zlotnik, Anatoly, Michael Chertkov, Richard Carter, Alex Hollis, Andrew Daniels, and Scott Backhaus. &ldquo;Using power grid schedules in dynamic optimization of gas pipelines.&rdquo; PSIG Annual Meeting. Pipeline Simulation Interest Group, 2016. <a href="http://www.onepetro.org/conference-paper/PSIG-1612" target="_blank"> PDF</a></p></li>
+<li><p>Zlotnik, Anatoly, Michael Chertkov, Richard Carter, Alex Hollis, Andrew Daniels, and Scott Backhaus. &ldquo;Using power grid schedules in dynamic optimization of gas pipelines.&rdquo; PSIG Annual Meeting. Pipeline Simulation Interest Group, 2016. <a href="http://www.onepetro.org/conference-paper/PSIG-1612" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Misra, Sidhant, Marc Vuffray, Anatoly Zlotnik, and Michael Chertkov.  &ldquo;Monotone order properties for control of nonlinear parabolic PDE on graphs.&rdquo; 22nd International Symposium on Mathematical Theory of Networks and Systems. 2016 <a href="http://arxiv.org/abs/1601.05102" target="_blank"> PDF</a></p></li>
+<li><p>Misra, Sidhant, Marc Vuffray, Anatoly Zlotnik, and Michael Chertkov.  &ldquo;Monotone order properties for control of nonlinear parabolic PDE on graphs.&rdquo; 22nd International Symposium on Mathematical Theory of Networks and Systems. 2016 <a href="http://arxiv.org/abs/1601.05102" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Zlotnik, Anatoly, Michael Chertkov, and Konstantin Turitsyn. &ldquo;Assessing risk of gas shortage in coupled gas-electricity infrastructures.&rdquo; 49th Hawaii International Conference on System Sciences (HICSS). IEEE, 2016. <a href="http://doi.org/10.1109/HICSS.2016.315" target="_blank"> PDF</a></p></li>
+<li><p>Zlotnik, Anatoly, Michael Chertkov, and Konstantin Turitsyn. &ldquo;Assessing risk of gas shortage in coupled gas-electricity infrastructures.&rdquo; 49th Hawaii International Conference on System Sciences (HICSS). IEEE, 2016. <a href="http://doi.org/10.1109/HICSS.2016.315" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Zlotnik, Anatoly, Michael Chertkov, and Scott Backhaus. &ldquo;Optimal control of transient flow in natural gas networks.&rdquo; 54th Annual Conference onDecision and Control (CDC). IEEE, 2015. <a href="https://doi.org/10.1109/CDC.2015.7402932" target="_blank"> PDF</a></p></li>
+<li><p>Zlotnik, Anatoly, Michael Chertkov, and Scott Backhaus. &ldquo;Optimal control of transient flow in natural gas networks.&rdquo; 54th Annual Conference onDecision and Control (CDC). IEEE, 2015. <a href="https://doi.org/10.1109/CDC.2015.7402932" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Zlotnik, Anatoly, Sergey Dyachenko, Scott Backhaus, and Michael Chertkov. &ldquo;Model reduction and optimization of natural gas pipeline dynamics.&rdquo; ASME Dynamic Systems and Control Conference. 2015. <a href="http://proceedings.asmedigitalcollection.asme.org/proceeding.aspx?articleid=2482022" target="_blank"> PDF</a></p></li>
+<li><p>Zlotnik, Anatoly, Sergey Dyachenko, Scott Backhaus, and Michael Chertkov. &ldquo;Model reduction and optimization of natural gas pipeline dynamics.&rdquo; ASME Dynamic Systems and Control Conference. 2015. <a href="http://proceedings.asmedigitalcollection.asme.org/proceeding.aspx?articleid=2482022" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Zlotnik, Anatoly, and Jr-Shin Li. &ldquo;Minimum energy subharmonic synchronization of an uncertain nonlinear oscillator.&rdquo; American Control Conference (ACC). IEEE, 2015. <a href="http://doi.org/10.1109/ACC.2015.7171811" target="_blank"> PDF</a></p></li>
+<li><p>Zlotnik, Anatoly, and Jr-Shin Li. &ldquo;Minimum energy subharmonic synchronization of an uncertain nonlinear oscillator.&rdquo; American Control Conference (ACC). IEEE, 2015. <a href="http://doi.org/10.1109/ACC.2015.7171811" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Qi, Ji, Anatoly Zlotnik, and Jr-Shin Li. &ldquo;Optimal ensemble control of stochastic linear systems.&rdquo; 52nd Annual Conference on Decision and Control (CDC). IEEE, 2013. <a href="https://doi.org/10.1109/CDC.2013.6760354" target="_blank"> PDF</a></p></li>
+<li><p>Qi, Ji, Anatoly Zlotnik, and Jr-Shin Li. &ldquo;Optimal ensemble control of stochastic linear systems.&rdquo; 52nd Annual Conference on Decision and Control (CDC). IEEE, 2013. <a href="https://doi.org/10.1109/CDC.2013.6760354" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Dasanayake, Isuru, Anatoly Zlotnik, Wei Zhang, and Jr-Shin Li.  &ldquo;Optimal control of neurons using the homotopy perturbation method.&rdquo; 52nd Annual Conference on Decision and Control (CDC). IEEE, 2013. <a href="https://doi.org/10.1109/CDC.2013.6760401" target="_blank"> PDF</a></p></li>
+<li><p>Dasanayake, Isuru, Anatoly Zlotnik, Wei Zhang, and Jr-Shin Li.  &ldquo;Optimal control of neurons using the homotopy perturbation method.&rdquo; 52nd Annual Conference on Decision and Control (CDC). IEEE, 2013. <a href="https://doi.org/10.1109/CDC.2013.6760401" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Zlotnik, Anatoly, and Jr-Shin Li. &ldquo;Iterative ensemble control synthesis for bilinear systems.&rdquo; 2012 IEEE 51st Annual Conference on Decision and Control (CDC). IEEE, 2012. <a href="https://doi.org/10.1109/CDC.2012.6425988" target="_blank"> PDF</a></p></li>
+<li><p>Zlotnik, Anatoly, and Jr-Shin Li. &ldquo;Iterative ensemble control synthesis for bilinear systems.&rdquo; 2012 IEEE 51st Annual Conference on Decision and Control (CDC). IEEE, 2012. <a href="https://doi.org/10.1109/CDC.2012.6425988" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Zlotnik, Anatoly, and Jr-Shin Li. &ldquo;Synthesis of optimal ensemble controls for linear systems using the singular value decomposition.&rdquo; American Control Conference (ACC). IEEE, 2012. <a href="https://doi.org/10.1109/ACC.2012.6315297" target="_blank"> PDF</a></p></li>
+<li><p>Zlotnik, Anatoly, and Jr-Shin Li. &ldquo;Synthesis of optimal ensemble controls for linear systems using the singular value decomposition.&rdquo; American Control Conference (ACC). IEEE, 2012. <a href="https://doi.org/10.1109/ACC.2012.6315297" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Ruths, Justin, Anatoly Zlotnik, and Shin Li. &ldquo;Convergence of a pseudospectral method for optimal control of complex dynamical systems.&rdquo; 50th IEEE Conference on Decision and Control and European Control Conference (CDC-ECC). IEEE, 2011. <a href="https://doi.org/10.1109/CDC.2011.6160761" target="_blank"> PDF</a></p></li>
+<li><p>Ruths, Justin, Anatoly Zlotnik, and Shin Li. &ldquo;Convergence of a pseudospectral method for optimal control of complex dynamical systems.&rdquo; 50th IEEE Conference on Decision and Control and European Control Conference (CDC-ECC). IEEE, 2011. <a href="https://doi.org/10.1109/CDC.2011.6160761" target="_blank"> ONLINE</a></p></li>
 
-<li><p>Zlotnik, Anatoly, and Jr-Shin Li. &ldquo;Optimal asymptotic entrainment of phase-reduced oscillators.&rdquo; Proc. ASME Dynamic Systems and Control Conf. (Arlington, VA) pp. 479-84. 2011. <a href="http://proceedings.asmedigitalcollection.asme.org/proceeding.aspx?articleid=1638452" target="_blank"> PDF</a></p></li>
+<li><p>Zlotnik, Anatoly, and Jr-Shin Li. &ldquo;Optimal asymptotic entrainment of phase-reduced oscillators.&rdquo; Proc. ASME Dynamic Systems and Control Conf. (Arlington, VA) pp. 479-84. 2011. <a href="http://proceedings.asmedigitalcollection.asme.org/proceeding.aspx?articleid=1638452" target="_blank"> ONLINE</a></p></li>
 </ul>
 
 <p><strong>Patents</strong></p>
