--- a/index.html
+++ b/index.html
@@ -157,7 +157,13 @@
         </h3>
 
         <h3 itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
-          <a href="//math.lanl.gov/" target="_blank" itemprop="url">
+          <a href="//lanl-ansi.github.io/" target="_blank" itemprop="url">
+          <span itemprop="name">Advanced Network Science Initiative</span>
+          </a>
+        </h3>
+        
+          <h3 itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
+          <a href="//www.lanl.gov/org/padste/adtsc/theoretical/applied-mathematics-plasma-physics/index.php" target="_blank" itemprop="url">
           <span itemprop="name">Applied Math &amp; Plasma Physics</span>
           </a>
         </h3>
