--- a/index.html
+++ b/index.html
@@ -213,10 +213,7 @@
   </div>
   <div class="col-xs-12 col-md-8" itemprop="description">
 
-    <p>I am a staff scientist at Los Alamos National Laboratory in the Applied Math and Plasma Physics group. My research
-interests are in dynamical systems, scientific computing, control theory,
-and optimization.  My current projects involve modeling, design, and optimal control
-of large-scale energy transmission systems, in particular natural gas pipelines.</p>
+    <p>I am a staff scientist at Los Alamos National Laboratory in the Applied Math and Plasma Physics group, where I was previously a postdoctoral associate at <a href="//cnls.lanl.gov/External/people/Anatoly_Zlotnik.php" target="_blank"> CNLS</a>. My research interests are in dynamical systems, scientific computing, control theory, and optimization.  My current projects involve modeling, design, and optimal control of large-scale energy transmission systems, in particular natural gas pipelines.   </p>
 
     <div class="row">
 
@@ -225,7 +222,7 @@ of large-scale energy transmission systems, in particular natural gas pipelines.
         <h3>Interests</h3>
         <ul class="ul-interests">
 
-          <li>Control of nonlinear oscillations</li>
+          <li>Energy Systems Optimization</li>
 
           <li>Large-scale and uncertain systems</li>
 
@@ -233,7 +230,7 @@ of large-scale energy transmission systems, in particular natural gas pipelines.
 
           <li>Computational methods for optimal control</li>
 
-          <li>Energy Systems Optimization</li>
+          <li>Control of nonlinear oscillations</li>
 
           <li>Engineering Economics</li>
 
@@ -323,8 +320,7 @@ of large-scale energy transmission systems, in particular natural gas pipelines.
     <p><strong>Journal Papers</strong></p>
     
 <ul>
-<li><p>Mak, Terrence W.K., Pascal Van Hentenryck, Anatoly Zlotnik, and Russell Bent. &ldquo;Dynamic Compressor Optimization in Natural Gas Pipeline Systems.&rdquo;
-INFORMS Journal of Computing, In press (2019); (2016 ICS Student Paper Award) <a href="https://tmak.info/papers/IJOC18.pdf" target="_blank"> ONLINE</a></p></li>
+<li><p>Mak, Terrence W.K., Pascal Van Hentenryck, Anatoly Zlotnik, and Russell Bent. &ldquo;<a href="https://tmak.info/papers/IJOC18.pdf" target="_blank"> Dynamic Compressor Optimization in Natural Gas Pipeline Systems</a>.&rdquo; INFORMS Journal of Computing, In press (2019); (<a href="https://www.informs.org/Recognizing-Excellence/Award-Recipients/Terrence-Mak" target="_blank">2016 ICS Student Paper Award</a>)</p></li>
 
 <li><p>Sundar, Kaarthik and Anatoly Zlotnik. &ldquo;State and Parameter Estimation for Natural Gas Pipeline Networks
 using Transient State Data.&rdquo;
@@ -572,21 +568,21 @@ IEEE Transactions on Power Systems 32.1 (2017): 600-610. <a href="http://ieeexpl
 <tr>
 <td><a href="https://www.math.ucdavis.edu/~jasnyder/" target="_blank">Jordan Snyder</a></td>
 <td><a href="http://www.ucdavis.edu/" target="_blank">UC Davis</a></td>
-<td>2016-present</td>
+<td>2016-2018</td>
 <td>Entrainment of Oscillations and Network Science     (with <a href="http://aric.hagberg.org/" target="_blank">Aric Hagberg</a>)</td>
 </tr>
 
 <tr>
 <td><a href="https://pages.wustl.edu/cgfp/people/walter-bomela" target="_blank">Walter Bomela</a></td>
 <td><a href="http://wustl.edu/" target="_blank">WUSTL</a></td>
-<td>2016-present</td>
+<td>2016-2017</td>
 <td>Control of Thermostatically Controlled Loads for Demand Response</td>
 </tr>
 
 <tr>
 <td><a href="http://www.linkedin.com/in/bining-zhao-121b3aa9" target="_blank">Bining Zhao</a></td>
 <td><a href="http://www.osu.edu/" target="_blank">Ohio State</a></td>
-<td>2016-present</td>
+<td>2016-2017</td>
 <td>Iterative Intra-Day Optimization of Natural Gas and Electricity Systems</td>
 </tr>
 
