--- a/index.html
+++ b/index.html
@@ -180,7 +180,12 @@
             <i class="fa fa-envelope big-icon"></i>
           </a>
         </li>
-
+        
+         <li>
+          <a  itemprop="sameAs" href="tel:505-606-0535" target="_blank"> 
+            <i class="fa fa-phone big-icon"></i>
+          </a>
+         </li>
 
         <li>
           <a itemprop="sameAs" href="//scholar.google.com/citations?user=sufIhoUAAAAJ" target="_blank">
