--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   </div>
   <div class="col-xs-12 col-md-8" itemprop="description">
 
-    <p>I am a staff scientist at Los Alamos National Laboratory in the Applied Math and Plasma Physics group, where I was previously a postdoctoral associate at <a href="//cnls.lanl.gov/External/people/Anatoly_Zlotnik.php" target="_blank"> CNLS</a>. My research interests are in dynamical systems, scientific computing, control theory, and optimization.  My current projects involve modeling, design, and optimal control of large-scale energy transmission systems, in particular natural gas pipelines.  For opportunities with the Advanced Network Science Initiative, please <a href="//azlotnik.github.io/#contact" target="_blank"> contact </a> me. </p>
+    <p>I am a staff scientist at Los Alamos National Laboratory in the Applied Math and Plasma Physics group, where I was previously a postdoctoral associate at <a href="//cnls.lanl.gov/External/people/Anatoly_Zlotnik.php" target="_blank"> CNLS</a>. My research interests are in dynamical systems, scientific computing, control theory, and optimization.  My current projects involve modeling, design, and optimal control of large-scale energy transmission systems, in particular natural gas pipelines.  For opportunities with the Advanced Network Science Initiative, please <a href="/#contact" data-target="#contact"> contact </a> me. </p>
 
     <div class="row">
 
